8196865: G1 log for active workers is wrong

Reviewed-by: tschatzl, sjohanss